--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -22,14 +22,19 @@
 }
 
 .position {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: grid;
+  place-content: center;
   font-weight: 700;
   position: absolute;
   z-index: 1000;
   font-size: 1.4rem;
   bottom: 4rem;
-  left: 50%;
+  left: 87%;
   transform: translateX(-50%);
-  background-color: var(--color-brand--2);
+  background-color: var(--color-dark--1);
   color: var(--color-dark--1);
   box-shadow: 0 0.4rem 1.2rem rgba(36, 42, 46, 0.16);
 }
@@ -37,5 +42,8 @@
 @media (max-width:768px) {
   .btn{
     padding: 0.8rem 0.6rem;
+  }
+  .position{
+    bottom: 5rem;
   }
 }
