fix some issues

--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -13,6 +13,10 @@
   font-weight: 700;
   background-color: var(--color-brand--2);
   color: var(--color-dark--1);
+  color: white;
+}
+.add {
+  width: 100%;
 }
 
 .back {
